--- a/src/index.html
+++ b/src/index.html
@@ -2808,7 +2808,7 @@
 	| DEV
 	|- - - - - - - - - - - - - - - - - - - - - - - - - - -
 	-->
-	<script src="https://unpkg.com/vue@2/dist/vue.global.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
 
 	<script src="vendor/clipboard/dist/clipboard.min.js"></script>
 	<script src="js/script.js?v=20201005"></script>
