--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
-	<meta name="description" content="Build and level up starships for your Starfinder RPG game by Paizo Inc. Create ships from scratch or customise sample ships from the Core Rulebook. Quick and easy.">
+	<meta name="description" content="Build and level up starships for your Starfinder RPG game by Paizo Inc. Create ships from scratch or customize sample ships from the Core Rulebook. Quick and easy.">
 	<meta name="viewport" content="initial-scale=1">
 	<title>Starfinder RPG Ship Builder | James Turner</title>
 	
@@ -15,13 +15,13 @@
 	
 	<!-- Twitter card & Open Graph -->
 	<meta name="twitter:card" content="summary" />
-	<meta name="twitter:site" content="@james_c_turner" />
+	<meta name="twitter:site" content="@themaskedferret" />
 	<meta name="twitter:image:alt" content="Artwork by Sebastien Hue" />
-	<meta name="twitter:creator" content="@james_c_turner" />
-	<meta property="og:url" content="http://www.jamesturneronline.net/starfinder-ship-builder/" />
+	<meta name="twitter:creator" content="@themaskedferret" />
+	<meta property="og:url" content="https://tmf.space/kb/sfsb/" />
 	<meta property="og:title" content="Starfinder RPG Ship Builder" />
-	<meta property="og:description" content="Build and level up starships for your Starfinder RPG game by Paizo Inc. Create ships from scratch or customise sample ships from the Core Rulebook. Quick and easy." />
-	<meta property="og:image" content="http://www.jamesturneronline.net/starfinder-ship-builder/img/twitter-card.jpg" />
+	<meta property="og:description" content="Build and level up starships for your Starfinder RPG game by Paizo Inc. Create ships from scratch or customize sample ships from the Core Rulebook. Quick and easy." />
+	<meta property="og:image" content="https://tmf.space/kb/sfsb/img/twitter-card.jpg" />
 	
 	<!-- Favicons -->
 	<link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32" />
@@ -30,7 +30,7 @@
 </head>
 
 <body>
-<div id="tmfheader" class="tmfheader">Welcome to The Masked Ferret Spaces! <a href="https://tmf.space>tmf.space Main Site</a></div>
+<div id="tmfheader" class="tmfheader">Welcome to The Masked Ferret Spaces! <a href="https://tmf.space">tmf.space Main Site</a></div>
 	<!--
 	| - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 	|	INLINE GRAPHICS
