--- a/src/index.html
+++ b/src/index.html
@@ -236,7 +236,7 @@ img,
 			</div><!--/.container-->
 		</div><!--/#header-middle-->
 </header>	
-		<div class="sidebar" id="sidebar">
+		<div class="sidebarSFSB" id="sidebarSFSB">
 		
 			<a href="#" class="sidebar__control sidebar__close">
 				<svg class="icon"><use xlink:href="#icon-close" /></svg>
