--- a/src/index.html
+++ b/src/index.html
@@ -2637,7 +2637,7 @@
 					<h2 id="output">Stat Block</h2>
 				</header>
 				<div class="box__info box__info--output">
-					<article id="statblock">
+					<article class="statblock" id="statblock">
 						<div class="statblockheader">
 							<h3>{{ shipName }} (Tier {{ tier.name }})</h3>
 						</div>
