--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
 	<meta name="description" content="Build and level up starships for your Starfinder RPG game by Paizo Inc. Create ships from scratch or customize sample ships from the Core Rulebook. Quick and easy.">
 	<meta name="viewport" content="initial-scale=1">
-	<title>Starfinder RPG Ship Builder | James Turner</title>
+	<title>Starfinder RPG Ship Builder | The Masked Ferret Space (tmf.space)</title>
 	
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Saira:400,400italic,700" rel="stylesheet">
@@ -30,7 +30,6 @@
 </head>
 
 <body>
-<div id="tmfheader" class="tmfheader">Welcome to The Masked Ferret Spaces! <a href="https://tmf.space">tmf.space Main Site</a></div>
 	<!--
 	| - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 	|	INLINE GRAPHICS
@@ -97,7 +96,7 @@
 	| - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 	-->
 	<div id="app" class="wrapper">
-	
+		<div id="tmfheader" class="tmfheader">Welcome to The Masked Ferret Spaces! <a href="https://tmf.space">tmf.space Main Site</a></div>
 		<div class="sidebar" id="sidebar">
 		
 			<a href="#" class="sidebar__control sidebar__close">
@@ -2751,14 +2750,14 @@
 			<footer>
 				<ul>
 					<li>
-						Starfinder RPG Ship Builder by <a href="http://www.jamesturneronline.net">James Turner</a> &bull;
-						<a href="https://twitter.com/james_c_turner">@james_c_turner</a>  &bull;
-						Sep 2017 (last updated September 2020)
+						Starfinder RPG Ship Builder by <a href="https://tmf.space">The Masked Ferret Spaces</a> &bull;
+						<a href="https://twitter.com/themaskedferret">@themaskedferret</a>  &bull;
+						Forked July 2023 (last updated July 2023)
 					</li>
 					<li><a href="http://paizo.com/starfinder/">Starfinder RPG</a> &copy; Paizo Inc, 2017</li>
-					<li>Open Game Licence</li>
+					<li><a href="https://tmf.space/about-us/legal-stuff/starfinder-ogl-1-0a/">Starfinder Open Game Licence</a>a></li>
 					<li>Made with <a href="https://vuejs.org/">Vue.js</a></li>
-					<li>Visit <a href="https://github.com/turnerjc/starfinder-ship-builder">repo on Github</a> to fork or raise issues</li>
+					<li>Visit <a href="https://github.com/TheMaskedFerret/starfinder-ship-builder">repo on Github</a> to fork or raise issues</li>
 					<li>Artwork by <a href="https://www.shue-digital.com/">Sebastien Hue</a> (used without permission)</li>
 					<li>Icons by the <a href="https://thenounproject.com/">Noun Project</a>:</li>
 					<ul>
