--- a/src/index.html
+++ b/src/index.html
@@ -97,7 +97,7 @@
 	-->
 	<div id="app" class="wrapper">
 		<div id="tmfheader" class="tmfheader">Welcome to The Masked Ferret Spaces! <a href="https://tmf.space">tmf.space Main Site</a></div>
-		<div class="sidebar" id="sidebar">
+		<div id="sidebar" class="sidebar">
 		
 			<a href="#" class="sidebar__control sidebar__close">
 				<svg class="icon"><use xlink:href="#icon-close" /></svg>
@@ -276,41 +276,12 @@
 			<div class="box">
 				<p>Supercolossal thanks to Patreon supporters:</p>
 				<ul class="supporters">
-					<li>Albert Scott Bodenhamer</li>
-					<li>Anish Hermon</li>
-					<li>Bruce Mohr</li>
-					<li>Carl Rohweder</li>
-					<li>Charles Mitchell</li>
-					<li>Corey Piper</li>
-					<li>Dan Arango</li>
-					<li>Daniel Petterson</li>
-					<li>Don Houdari Freeman</li>
-					<li>Frank Broadway</li>
-					<li>Geoff Sears</li>
-					<li>Jaye Sonia</li>
-					<li>Kaalen Kirrene</li>
-					<li>Loki</li>
-					<li>Matthew Atkins</li>
-					<li>Michael Ross</li>
-					<li>Noble Hays</li>
-					<li>Quinn</li>
-					<li>Rob Gill</li>
-					<li>Robert Trimarco</li>
-					<li>Rozborn</li>
-					<li>Shaun Wolf</li>
-					<li>TharBejeff</li>
-					<li>The Amazing Russell A Sinclair</li>
-					<li>Thomas P Felder</li>
-					<li>Tim Hathaway</li>
-					<li>Toby Dillon</li>
-					<li>William H Wooley IV</li>
-					<li>William Refsland</li>
-					<li>Yami</li>
+					<li>Currently None</li>
 				</ul>
 
 	            <div class="app-message" style="text-align: left;">
 	            	Want to support this site?
-	            	<a href="https://www.patreon.com/user?u=15502682" target="_blank">
+	            	<a href="https://www.patreon.com/themaskedferret" target="_blank">
 	            		<img height="auto" width="150" style="margin-bottom: -12px;" src="img/become_a_patron_button.png" alt="Become a patron">
 	            	</a>
 	            </div>
