--- a/src/index.html
+++ b/src/index.html
@@ -96,7 +96,19 @@
 	| - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 	-->
 	<div id="app" class="wrapper">
-		<div id="tmfheader" class="tmfheader">Welcome to The Masked Ferret Spaces! <a href="https://tmf.space">tmf.space Main Site</a></div>
+		<div id="tmfheader" class="tmfheader">
+			<h1 class="site-title"><a href="https://tmf.space/" rel="home">The Masked Ferret Spaces</a></h1>
+			<p class="site-description">An adventure across time and space</p>
+			<ul class="social-links">
+				<li><a rel="nofollow" class="social-tooltip" title="Twitter" href="https://twitter.com/TheMaskedFerret" target="_blank"><i class="fab fa-twitter" style="color: #72130a;"></i></a></li>
+				<li><a rel="nofollow" class="social-tooltip" title="Twitch - therealmaskedferret" href="https://www.twitch.tv/therealmaskedferret" target="_blank"><i class="fab fa-twitch" style="color: #8224e3;"></i></a></li>
+				<li><a rel="nofollow" class="social-tooltip" title="Instagram -" href="https://www.instagram.com/themaskedferret/" target="_blank"><i class="fab fa-instagram" style="color: #1e73be;"></i></a></li>
+				<li><a rel="nofollow" class="social-tooltip" title="Reddit - MaskedFerretInSpace" href="https://www.reddit.com/user/MaskedFerretInSpace" target="_blank"><i class="fab fa-reddit-alien" style="color: #f25709;"></i></a></li>
+				<li><a rel="nofollow" class="social-tooltip" title="Webnovel Author Page" href="https://www.webnovel.com/profile/4314382107?appId=10" target="_blank"><i class="fab fa-readme" style="color: #311ebf;"></i></a></li>
+				<li><a rel="nofollow" class="social-tooltip" title="DriveThruRPG Publisher Page" href="https://www.drivethrurpg.com/browse/pub/11465/The-Masked-Ferret-Spaces?affiliate_id=1302458" target="_blank"><i class="fab fa-leanpub" style="color: #dd3333;"></i></a></li>
+				<li><a rel="nofollow" class="social-tooltip" title="Discord - DSC League Server" href="https://discord.gg/bDuqEqs" target="_blank"><i class="fab fa-discord" style="color: #81d742;"></i></a></li>
+			</ul>
+		</div>
 		<div id="sidebar" class="sidebar">
 		
 			<a href="#" class="sidebar__control sidebar__close">
