Update index.html - renaming Output to Stat Block

--- a/src/index.html
+++ b/src/index.html
@@ -159,7 +159,7 @@
 					</ul>
 					<li><a href="#custom-components">Custom Components</a></li>
 					<li><a href="#crew">Crew</a></li>
-					<li><a href="#output">Output</a></li>
+					<li><a href="#statblock">Stat Block</a></li>
 				</ul>
 
 			</nav>
@@ -2610,13 +2610,13 @@
 			
 			<!--
 			| - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-			|	OUTPUT
+			|	Stat Block
 			| - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 			-->
 			
 			<div class="box">
 				<header class="box__header">
-					<h2 id="output">Stat Block</h2>
+					<h2 id="statblock">Stat Block</h2>
 				</header>
 				<div class="box__info box__info--output">
 					<article class="statblock" id="statblock">
